--- a/static/css/openmarketplace.css
+++ b/static/css/openmarketplace.css
@@ -24,7 +24,7 @@ body {
     overflow-y: auto
 }
 body {
-	color: #fff;
+	color: #000;
     background-color: #fff;
     background: url('/img/background.jpg');
     background-repeat: no-repeat;
@@ -4567,14 +4567,16 @@ table.text-center th {
 .login-logo,.register-logo {
 	font-size: 5vh;
 	text-align:center;
-	font-weight:300
+	font-weight:300;
+	color: #fff;
 }
 
 .login-logo a,.register-logo a{
-	color:#444
+	color: #fff;
 }
 
 .login-text {
+	color: #fff;	
     text-align: center;
     margin-bottom: 15px;   	
 }
