--- a/static/css/openmarketplace.css
+++ b/static/css/openmarketplace.css
@@ -96,7 +96,7 @@ body {
 .content-wrapper,
 .right-side {
     min-height: 100%;
-    background-color: #ecf0f5;
+    background-color: #E9E9ED;
     z-index: 800
 }
 .main-footer {
@@ -162,7 +162,7 @@ h6,
     font-family: 'Source Sans Pro', sans-serif
 }
 a {
-    color: #3c8dbc
+    color: #303F9F
 }
 a:hover,
 a:active,
@@ -323,7 +323,7 @@ a:focus {
     position: absolute;
     top: 15px;
     right: 10px;
-    border-radius: 2px
+    /*border-radius: 2px*/
 }
 .content-header>.breadcrumb>li>a {
     color: #444;
@@ -794,7 +794,7 @@ a:focus {
 }
 .control-sidebar-dark,
 .control-sidebar-dark+.control-sidebar-bg {
-    background: #222d32
+    background: #36474E
 }
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs {
     border-bottom: #1c2529
@@ -821,7 +821,7 @@ a:focus {
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs>li.active>a:hover,
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs>li.active>a:focus,
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs>li.active>a:active {
-    background: #222d32;
+    background: #36474E;
     color: #fff
 }
 .control-sidebar-dark .control-sidebar-heading,
@@ -1207,7 +1207,7 @@ a:focus {
     border-color: #d2d6de
 }
 .form-control:focus {
-    border-color: #3c8dbc;
+    border-color: #303F9F;
     box-shadow: none
 }
 .form-control::-moz-placeholder,
@@ -1338,12 +1338,9 @@ a:focus {
 .progress-group .progress-number {
     float: right
 }
-.table tr>td .progress {
-    margin: 0
-}
 .progress-bar-light-blue,
 .progress-bar-primary {
-    background-color: #3c8dbc
+    background-color: #303F9F
 }
 .progress-striped .progress-bar-light-blue,
 .progress-striped .progress-bar-primary {
@@ -1467,7 +1464,7 @@ a:focus {
 }
 .box {
     position: relative;
-    border-radius: 3px;
+    /*border-radius: 3px;*/
     background: #ffffff;
     border-top: 3px solid #d2d6de;
     margin-bottom: 20px;
@@ -1475,7 +1472,7 @@ a:focus {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1)
 }
 .box.box-primary {
-    border-top-color: #3c8dbc
+    border-top-color: #303F9F
 }
 .box.box-info {
     border-top-color: #00c0ef
@@ -1536,12 +1533,12 @@ a:focus {
     color: #444
 }
 .box.box-solid.box-primary {
-    border: 1px solid #3c8dbc
+    border: 1px solid #303F9F
 }
 .box.box-solid.box-primary>.box-header {
     color: #fff;
-    background: #3c8dbc;
-    background-color: #3c8dbc
+    background: #303F9F;
+    background-color: #303F9F
 }
 .box.box-solid.box-primary>.box-header a,
 .box.box-solid.box-primary>.box-header .btn {
@@ -1863,7 +1860,7 @@ a:focus {
     border-left-color: #00a65a
 }
 .todo-list .primary {
-    border-left-color: #3c8dbc
+    border-left-color: #303F9F
 }
 .todo-list .handle {
     display: inline-block;
@@ -2099,13 +2096,14 @@ a:focus {
     border-bottom-color: #ddd
 }
 .btn {
-    border-radius: 3px;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border: 1px solid transparent
+    border-radius: 2px;
+    border-width: 0;
+    transition: background-color .3s;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
 }
 .btn.uppercase {
-    text-transform: uppercase
+    text-transform: uppercase;
 }
 .btn.btn-flat {
     border-radius: 0;
@@ -2152,7 +2150,7 @@ a:focus {
     background-color: #e7e7e7
 }
 .btn-primary {
-    background-color: #3c8dbc;
+    background-color: #303F9F;
     border-color: #367fa9
 }
 .btn-primary:hover,
@@ -2342,7 +2340,7 @@ a:focus {
 .nav-pills>li.active>a,
 .nav-pills>li.active>a:hover,
 .nav-pills>li.active>a:focus {
-    border-top-color: #3c8dbc
+    border-top-color: #303F9F
 }
 .nav-pills>li.active>a {
     font-weight: 600
@@ -2358,7 +2356,7 @@ a:focus {
     background: transparent;
     color: #444;
     border-top: 0;
-    border-left-color: #3c8dbc
+    border-left-color: #303F9F
 }
 .nav-stacked>li.header {
     border-bottom: 1px solid #ddd;
@@ -2370,8 +2368,8 @@ a:focus {
 .nav-tabs-custom {
     margin-bottom: 20px;
     background: #fff;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    border-radius: 3px
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    /*border-radius: 3px*/
 }
 .nav-tabs-custom>.nav-tabs {
     margin: 0;
@@ -2405,7 +2403,7 @@ a:focus {
     border-color: transparent
 }
 .nav-tabs-custom>.nav-tabs>li.active {
-    border-top-color: #3c8dbc
+    border-top-color: #303F9F
 }
 .nav-tabs-custom>.nav-tabs>li.active>a,
 .nav-tabs-custom>.nav-tabs>li.active:hover>a {
@@ -2517,19 +2515,35 @@ a:focus {
 .product-list-in-box>.item:last-of-type {
     border-bottom-width: 0
 }
-.table>thead>tr>th,
-.table>tbody>tr>th,
-.table>tfoot>tr>th,
+.fixed-table-container {
+    border: 0px !important;
+    border-radius: 0px !important;
+}
+.table tr>td .progress {
+    margin: 0
+}
 .table>thead>tr>td,
 .table>tbody>tr>td,
 .table>tfoot>tr>td {
-    border-top: 1px solid #f4f4f4
+    border: 0px !important;
+    padding: 10px;
+}
+.table {
+    border: 0px !important;
+    border-radius: 0px !important;
 }
 .table>thead>tr>th {
-    border-bottom: 2px solid #f4f4f4
+    border-bottom: 1px solid #f4f4f4;
+    border-top: 0px !important;
+    border-left: 0px !important;
+    border-right: 0px !important;
+}
+.fixed-table-body {
+    border: 0px !important;
+    border-radius: 0px !important;
 }
 .table tr td .progress {
-    margin-top: 5px
+    margin-top: 5px;
 }
 .table-bordered {
     border: 1px solid #f4f4f4
@@ -2686,7 +2700,7 @@ table.text-center th {
     bottom: 0;
     height: 250px;
     width: 100%;
-    background: #222d32;
+    background: #36474E;
     color: #fff;
     overflow: auto
 }
@@ -2742,13 +2756,13 @@ table.text-center th {
     border-left-color: #dd4b39
 }
 .direct-chat-primary .right>.direct-chat-text {
-    background: #3c8dbc;
-    border-color: #3c8dbc;
+    background: #303F9F;
+    border-color: #303F9F;
     color: #fff
 }
 .direct-chat-primary .right>.direct-chat-text:after,
 .direct-chat-primary .right>.direct-chat-text:before {
-    border-left-color: #3c8dbc
+    border-left-color: #303F9F
 }
 .direct-chat-warning .right>.direct-chat-text {
     background: #f39c12;
@@ -3852,14 +3866,14 @@ table.text-center th {
     height: 34px
 }
 .select2-container--default.select2-container--open {
-    border-color: #3c8dbc
+    border-color: #303F9F
 }
 .select2-dropdown {
     border: 1px solid #d2d6de;
     border-radius: 0
 }
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-    background-color: #3c8dbc;
+    background-color: #303F9F;
     color: white
 }
 .select2-results__option {
@@ -3891,7 +3905,7 @@ table.text-center th {
 .select2-dropdown .select2-search__field:focus,
 .select2-search--inline .select2-search__field:focus {
     outline: none;
-    border: 1px solid #3c8dbc
+    border: 1px solid #303F9F
 }
 .select2-container--default .select2-results__option[aria-disabled=true] {
     color: #999
@@ -3908,13 +3922,13 @@ table.text-center th {
     border-radius: 0
 }
 .select2-container--default .select2-selection--multiple:focus {
-    border-color: #3c8dbc
+    border-color: #303F9F
 }
 .select2-container--default.select2-container--focus .select2-selection--multiple {
     border-color: #d2d6de
 }
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
-    background-color: #3c8dbc;
+    background-color: #303F9F;
     border-color: #367fa9;
     padding: 1px 10px;
     color: #fff
@@ -4063,7 +4077,7 @@ table.text-center th {
 .bg-light-blue,
 .label-primary,
 .modal-primary .modal-body {
-    background-color: #3c8dbc !important
+    background-color: #303F9F !important
 }
 .bg-green,
 .callout.callout-success,
@@ -4175,7 +4189,7 @@ table.text-center th {
     color: #111 !important
 }
 .text-light-blue {
-    color: #3c8dbc !important
+    color: #303F9F !important
 }
 .text-green {
     color: #00a65a !important
@@ -4278,12 +4292,12 @@ table.text-center th {
     color: #fff
 }
 .bg-light-blue-gradient {
-    background: #3c8dbc !important;
-    background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #3c8dbc), color-stop(1, #67a8ce)) !important;
-    background: -ms-linear-gradient(bottom, #3c8dbc, #67a8ce) !important;
-    background: -moz-linear-gradient(center bottom, #3c8dbc 0, #67a8ce 100%) !important;
-    background: -o-linear-gradient(#67a8ce, #3c8dbc) !important;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#67a8ce', endColorstr='#3c8dbc', GradientType=0) !important;
+    background: #303F9F !important;
+    background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #303F9F), color-stop(1, #67a8ce)) !important;
+    background: -ms-linear-gradient(bottom, #303F9F, #67a8ce) !important;
+    background: -moz-linear-gradient(center bottom, #303F9F 0, #67a8ce 100%) !important;
+    background: -o-linear-gradient(#67a8ce, #303F9F) !important;
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#67a8ce', endColorstr='#303F9F', GradientType=0) !important;
     color: #fff
 }
 .bg-blue-gradient {
