--- a/static/css/openmarketplace.css
+++ b/static/css/openmarketplace.css
@@ -182,8 +182,9 @@ a:focus {
 }
 .main-header>.navbar {
     -webkit-transition: margin-left .3s ease-in-out;
-    -o-transition: margin-left .3s ease-in-out;
-    transition: margin-left .3s ease-in-out;
+       -moz-transition: margin-left .3s ease-in-out;
+         -o-transition: margin-left .3s ease-in-out;
+            transition: margin-left .3s ease-in-out;
     margin-bottom: 0;
     margin-left: 230px;
     border: none;
@@ -194,6 +195,7 @@ a:focus {
     margin-left: 0
 }
 .main-header #navbar-search-input.form-control {
+    background: white;
     background: rgba(255, 255, 255, 0.2);
     border-color: transparent
 }
@@ -529,9 +531,10 @@ a:focus {
 }
 .sidebar-menu li.active>a>.fa-angle-left {
     -webkit-transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    -o-transform: rotate(-90deg);
-    transform: rotate(-90deg)
+       -moz-transform: rotate(-90deg);    
+        -ms-transform: rotate(-90deg);
+         -o-transform: rotate(-90deg);
+            transform: rotate(-90deg)
 }
 .sidebar-menu li.active>.treeview-menu {
     display: block
@@ -619,7 +622,8 @@ a:focus {
     .sidebar-mini.sidebar-collapse .sidebar-menu>li>a>.pull-right,
     .sidebar-mini.sidebar-collapse .sidebar-menu li.header {
         display: none!important;
-        -webkit-transform: translateZ(0)
+        -webkit-transform: translateZ(0);
+                transform: translateZ(0);
     }
     .sidebar-mini.sidebar-collapse .main-header .logo {
         width: 50px
@@ -1164,6 +1168,7 @@ a:focus {
     0% {
         -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
         -webkit-transition-timing-function: ease-in;
+        transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
         opacity: 0
     }
     40% {
@@ -1216,11 +1221,12 @@ a:focus {
 /*    border-color: #303F9F;
     box-shadow: none;
 */
-    box-shadow: inset 0 -2px 0 #3D51B5;
     -webkit-box-shadow: inset 0 -2px 0 #3D51B5;
+       -moz-box-shadow: inset 0 -2px 0 #3D51B5;
+            box-shadow: inset 0 -2px 0 #3D51B5;
     -webkit-transition: box-shadow ease-in-out .15s,box-shadow ease-in-out .15s;
-    -o-transition: box-shadow ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition: box-shadow ease-in-out .15s,box-shadow ease-in-out .15s;
+         -o-transition: box-shadow ease-in-out .15s,box-shadow ease-in-out .15s;
+            transition: box-shadow ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 .form-control::-moz-placeholder,
 .form-control:-ms-input-placeholder,
@@ -1637,6 +1643,7 @@ a:focus {
 .box .overlay,
 .overlay-wrapper .overlay {
     z-index: 50;
+    background: white;
     background: rgba(255, 255, 255, 0.7);
     border-radius: 3px
 }
@@ -1965,6 +1972,7 @@ a:focus {
     font-size: 14px
 }
 .info-box .progress {
+    background: black;
     background: rgba(0, 0, 0, 0.2);
     margin: 5px -10px 5px -10px;
     height: 2px
@@ -2626,9 +2634,10 @@ table.text-center th {
 }
 .direct-chat.chat-pane-open .direct-chat-contacts {
     -webkit-transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
-    -o-transform: translate(0, 0);
-    transform: translate(0, 0)
+       -moz-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+         -o-transform: translate(0, 0);
+            transform: translate(0, 0);
 }
 .direct-chat-messages {
     -webkit-transform: translate(0, 0);
@@ -3321,7 +3330,8 @@ table.text-center th {
 .btn-adn {
     color: #fff;
     background-color: #d87a68;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-adn:hover,
 .btn-adn:focus,
@@ -3331,6 +3341,7 @@ table.text-center th {
 .open>.dropdown-toggle.btn-adn {
     color: #fff;
     background-color: #ce563f;
+    border-color: black;
     border-color: rgba(0, 0, 0, 0.2)
 }
 .btn-adn:active,
@@ -3345,6 +3356,7 @@ table.text-center th {
 .btn-bitbucket {
     color: #fff;
     background-color: #205081;
+    border-color: black;
     border-color: rgba(0, 0, 0, 0.2)
 }
 .btn-bitbucket:hover,
@@ -3355,6 +3367,7 @@ table.text-center th {
 .open>.dropdown-toggle.btn-bitbucket {
     color: #fff;
     background-color: #163758;
+    border-color: black;
     border-color: rgba(0, 0, 0, 0.2)
 }
 .btn-bitbucket:active,
@@ -3369,6 +3382,7 @@ table.text-center th {
 .btn-dropbox {
     color: #fff;
     background-color: #1087dd;
+    border-color: black;
     border-color: rgba(0, 0, 0, 0.2)
 }
 .btn-dropbox:hover,
@@ -3379,6 +3393,7 @@ table.text-center th {
 .open>.dropdown-toggle.btn-dropbox {
     color: #fff;
     background-color: #0d6aad;
+    border-color: black;
     border-color: rgba(0, 0, 0, 0.2)
 }
 .btn-dropbox:active,
@@ -3393,6 +3408,7 @@ table.text-center th {
 .btn-facebook {
     color: #fff;
     background-color: #3b5998;
+    border-color: black;
     border-color: rgba(0, 0, 0, 0.2)
 }
 .btn-facebook:hover,
@@ -3403,6 +3419,7 @@ table.text-center th {
 .open>.dropdown-toggle.btn-facebook {
     color: #fff;
     background-color: #2d4373;
+    border-color: black;
     border-color: rgba(0, 0, 0, 0.2)
 }
 .btn-facebook:active,
@@ -3417,7 +3434,8 @@ table.text-center th {
 .btn-flickr {
     color: #fff;
     background-color: #ff0084;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-flickr:hover,
 .btn-flickr:focus,
@@ -3427,7 +3445,8 @@ table.text-center th {
 .open>.dropdown-toggle.btn-flickr {
     color: #fff;
     background-color: #cc006a;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-flickr:active,
 .btn-flickr.active,
@@ -3441,7 +3460,8 @@ table.text-center th {
 .btn-foursquare {
     color: #fff;
     background-color: #f94877;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-foursquare:hover,
 .btn-foursquare:focus,
@@ -3451,7 +3471,8 @@ table.text-center th {
 .open>.dropdown-toggle.btn-foursquare {
     color: #fff;
     background-color: #f71752;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-foursquare:active,
 .btn-foursquare.active,
@@ -3465,7 +3486,8 @@ table.text-center th {
 .btn-github {
     color: #fff;
     background-color: #444;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-github:hover,
 .btn-github:focus,
@@ -3475,7 +3497,8 @@ table.text-center th {
 .open>.dropdown-toggle.btn-github {
     color: #fff;
     background-color: #2b2b2b;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-github:active,
 .btn-github.active,
@@ -3489,7 +3512,8 @@ table.text-center th {
 .btn-google {
     color: #fff;
     background-color: #dd4b39;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-google:hover,
 .btn-google:focus,
@@ -3499,7 +3523,8 @@ table.text-center th {
 .open>.dropdown-toggle.btn-google {
     color: #fff;
     background-color: #c23321;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-google:active,
 .btn-google.active,
@@ -3513,7 +3538,8 @@ table.text-center th {
 .btn-instagram {
     color: #fff;
     background-color: #3f729b;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-instagram:hover,
 .btn-instagram:focus,
@@ -3523,7 +3549,8 @@ table.text-center th {
 .open>.dropdown-toggle.btn-instagram {
     color: #fff;
     background-color: #305777;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-instagram:active,
 .btn-instagram.active,
@@ -3537,7 +3564,8 @@ table.text-center th {
 .btn-linkedin {
     color: #fff;
     background-color: #007bb6;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-linkedin:hover,
 .btn-linkedin:focus,
@@ -3547,7 +3575,8 @@ table.text-center th {
 .open>.dropdown-toggle.btn-linkedin {
     color: #fff;
     background-color: #005983;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-linkedin:active,
 .btn-linkedin.active,
@@ -3561,7 +3590,8 @@ table.text-center th {
 .btn-microsoft {
     color: #fff;
     background-color: #2672ec;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-microsoft:hover,
 .btn-microsoft:focus,
@@ -3571,7 +3601,8 @@ table.text-center th {
 .open>.dropdown-toggle.btn-microsoft {
     color: #fff;
     background-color: #125acd;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-microsoft:active,
 .btn-microsoft.active,
@@ -3585,7 +3616,8 @@ table.text-center th {
 .btn-openid {
     color: #fff;
     background-color: #f7931e;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-openid:hover,
 .btn-openid:focus,
@@ -3595,7 +3627,8 @@ table.text-center th {
 .open>.dropdown-toggle.btn-openid {
     color: #fff;
     background-color: #da7908;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-openid:active,
 .btn-openid.active,
@@ -3609,7 +3642,8 @@ table.text-center th {
 .btn-pinterest {
     color: #fff;
     background-color: #cb2027;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-pinterest:hover,
 .btn-pinterest:focus,
@@ -3619,7 +3653,8 @@ table.text-center th {
 .open>.dropdown-toggle.btn-pinterest {
     color: #fff;
     background-color: #9f191f;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-pinterest:active,
 .btn-pinterest.active,
@@ -3633,7 +3668,8 @@ table.text-center th {
 .btn-reddit {
     color: #000;
     background-color: #eff7ff;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-reddit:hover,
 .btn-reddit:focus,
@@ -3643,7 +3679,8 @@ table.text-center th {
 .open>.dropdown-toggle.btn-reddit {
     color: #000;
     background-color: #bcddff;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-reddit:active,
 .btn-reddit.active,
@@ -3657,7 +3694,8 @@ table.text-center th {
 .btn-soundcloud {
     color: #fff;
     background-color: #f50;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-soundcloud:hover,
 .btn-soundcloud:focus,
@@ -3667,7 +3705,8 @@ table.text-center th {
 .open>.dropdown-toggle.btn-soundcloud {
     color: #fff;
     background-color: #c40;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-soundcloud:active,
 .btn-soundcloud.active,
@@ -3681,7 +3720,8 @@ table.text-center th {
 .btn-tumblr {
     color: #fff;
     background-color: #2c4762;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-tumblr:hover,
 .btn-tumblr:focus,
@@ -3705,7 +3745,8 @@ table.text-center th {
 .btn-twitter {
     color: #fff;
     background-color: #55acee;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-twitter:hover,
 .btn-twitter:focus,
@@ -3729,7 +3770,8 @@ table.text-center th {
 .btn-vimeo {
     color: #fff;
     background-color: #1ab7ea;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-vimeo:hover,
 .btn-vimeo:focus,
@@ -3753,7 +3795,8 @@ table.text-center th {
 .btn-vk {
     color: #fff;
     background-color: #587ea3;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-vk:hover,
 .btn-vk:focus,
@@ -3777,7 +3820,8 @@ table.text-center th {
 .btn-yahoo {
     color: #fff;
     background-color: #720e9e;
-    border-color: rgba(0, 0, 0, 0.2)
+    border-color: black;
+    border-color: rgba(0, 0, 0, 0.2);
 }
 .btn-yahoo:hover,
 .btn-yahoo:focus,
@@ -3872,8 +3916,9 @@ table.text-center th {
 }
 #add-new-event {
     -webkit-transition: all linear .3s;
-    -o-transition: all linear .3s;
-    transition: all linear .3s
+       -moz-transition: all linear .3s;
+         -o-transition: all linear .3s;
+            transition: all linear .3s;
 }
 .external-event {
     padding: 5px 10px;
@@ -3916,7 +3961,9 @@ table.text-center th {
 .select2-results__option {
     padding: 6px 12px;
     user-select: none;
-    -webkit-user-select: none
+    -webkit-user-select: none;
+       -moz-user-select: none;
+           -user-select: none;
 }
 .select2-container .select2-selection--single .select2-selection__rendered {
     padding-left: 0;
