--- a/static/css/openmarketplace.css
+++ b/static/css/openmarketplace.css
@@ -16,16 +16,12 @@ body {
 }
 body {
 	color: #666;
-    background-color: #222d32;
-}
-
-body.background-city {
+    background-color: #E9E9ED;
     background: url('/img/background.jpg') !important;
     background-repeat: no-repeat !important;
     background-attachment: fixed !important;
     background-position: center !important;
 }
-
 .wrapper {
     min-height: 100%;
     position: static;
@@ -3181,7 +3177,7 @@ table.text-center th {
         text-align: center
     }
 }
-.invoice {
+/*.invoice {
     position: relative;
     background: #fff;
     border: 1px solid #f4f4f4;
@@ -3190,7 +3186,7 @@ table.text-center th {
 }
 .invoice-title {
     margin-top: 0
-}
+}*/
 .profile-user-img {
     margin: 0 auto;
     width: 100px;
@@ -3942,10 +3938,22 @@ table.text-center th {
 }
 .select2-container--default .select2-selection--single,
 .select2-selection .select2-selection--single {
-    border: 1px solid #d2d6de;
     border-radius: 0;
     padding: 6px 12px;
     height: 34px
+    border-radius: 0;
+    box-shadow: inset 0 -1px 0 #ddd;
+    -webkit-box-shadow: inset 0 -1px 0 #ddd;
+    border: none;
+}
+.select2-container--default .select2-selection--single:focus,
+.select2-selection .select2-selection--single:focus {
+    -webkit-box-shadow: inset 0 -2px 0 #3D51B5;
+       -moz-box-shadow: inset 0 -2px 0 #3D51B5;
+            box-shadow: inset 0 -2px 0 #3D51B5;
+    -webkit-transition: box-shadow ease-in-out .15s,box-shadow ease-in-out .15s;
+         -o-transition: box-shadow ease-in-out .15s,box-shadow ease-in-out .15s;
+            transition: box-shadow ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 .select2-container--default.select2-container--open {
     border-color: #303F9F
@@ -4700,7 +4708,8 @@ table.text-center th {
 }
 
 label {
-    font-weight: 400;    
+    font-weight: 400;
+    font-size: 13px;    
 }
 
 label.error {
